--- a/tags/0.2/mobile_portal/mobile_portal/templates/static/about.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/static/about.xhtml
@@ -1,7 +1,7 @@
-<div class="section-nopad">
-    <h2 class="section-header">About this site</h2>
+<div class="section">
+    <h2>About this site</h2>
 
-    <div class="section-content">
+    <div class="note"><div class="bubble pad-10">
     Mobile Oxford was produced as part of the
     <a href="http://erewhon.oucs.ox.ac.uk/">Erewhon Project</a>, a
     <a href="http://www.jisc.ac.uk/">JISC</a>-funded project to explore the
@@ -9,19 +9,20 @@
     mobile devices. <br />
     
     It is designed and managed by Tim Fernando and Alexander Dutton at Oxford University Computing Services.
-    </div>
+    </div></div>
 </div>
 
-<div class="section-nopad">
-    <h2 class="section-header">Credits</h2>
-
-    <div class="section-content">
+<div class="section">
+    <h2>Credits</h2>
+    <div class="note"><div class="bubble pad-10">
         <p>
         The Erewhon team would like to thank the following organisations
         for providing the data used in the Portal:
         </p>
         
         <dl>
+			<dt>Dailyinfo</dt>
+			<dt>Association of Train Operating Companies</dt>
             <dt>Oxontime</dt>
 			<dt>Oxfordshire County Council</dt>
 			<dt>Stagecoach, Oxford Bus Company &amp; Thames Travel</dt>
@@ -32,13 +33,12 @@
             <dt>Oxford University Library Services</dt>
 			<dt>Cloudmade</dt>
         </dl>
-    </div>
+    </div></div>
 </div>
 
-<div class="section-nopad">
-	<h2 class="section-header">Be aware</h2>
-	<div class="section-content">
+<div class="section">
+	<h2>Be aware</h2>
+	<div class="note"><div class="bubble pad-10">
 		<p>
-			Please note that using Mobile Oxford may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your network provider for more information.</p>
-			</div>
-			</div>
+			Using Mobile Oxford may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your provider for more information.</p>
+</div></div></div>
