--- a/tags/0.2/mobile_portal/mobile_portal/templates/z3950/item_list.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/z3950/item_list.xhtml
@@ -23,34 +23,38 @@
 {% endif %}
 
 {% if page %}
-<div class="list-section">
-<h2 class="section-header">Result list <small>(unsorted)</small></h2>
+<div class="section">
+<h2>Result list <small>(unsorted)</small></h2>
 {% if removed %}
-<div class="list-note"><div class="bubble">
+<div class="note"><div class="bubble pad-10">
     The following common word{{ removed|length|pluralize:" was,s were" }} not included in your query:
     {% for w in removed %}{% if forloop.last %}{% if not forloop.first %}and {% endif %}<em>{{ w }}</em>{% else %}<em>{{ w }}</em>, {% endif %}{% endfor %}
 </div></div>
 {% endif %}
 
-<div class="list-note pagination-nav">
+<div class="note">
+
+{% comment %}
 {% if page.has_previous %}
     <a href="?title={{ title|urlencode }}&author={{ author|urlencode }}&isbn={{ isbn|urlencode }}&page={{ page.previous_page_number }}" title="Previous page" class="prev">
         <img src="{{ MEDIA_URL }}png/icons/list-arrow-left.png" alt="&#8592;"/>
     </a>
 {% endif %}
+{% endcomment %}
+
     Showing results {{ page.start_index }} to {{ page.end_index }} of {{ paginator.object_list|length }}. Page {{ page.number }} of {{ paginator.num_pages }}.
 {% if page.has_next %}
     <a href="?title={{ title|urlencode }}&author={{ author|urlencode }}&isbn={{ isbn|urlencode }}&page={{ page.next_page_number }}" title="Next page" class="next">
-        <img src="{{ MEDIA_URL }}png/icons/list-arrow.png" alt="&#8594;"/>
+        Next
     </a>
 {% endif %}
 </div>
 
-<ul class="ml">
+<ul>
 {% for item in page.object_list %}
-<li{% if forloop.last %} class="notbottom"{% endif %}>
+<li{% if forloop.last %} class="round-bottom"{% endif %}>
     <a href="{% url z3950_item_detail item.control_number %}">
-        {{ item }}{% if item.author %}
+        {{ item  }}{% if item.author %}
         <br/><small><strong>Author:</strong> {{ item.author }}</small>{% endif %}
         <br/><small><strong>Publisher:</strong> {{ item.publisher }}</small>{% if item.edition %}
         <br/><small><strong>Edition:</strong> {{ item.edition }}</small>{% endif %}
@@ -60,20 +64,14 @@
 {% endfor %}
 </ul>
 
-<div class="list-footer pagination-nav">
-{% if page.has_previous %}
-    <a href="?title={{ title|urlencode }}&author={{ author|urlencode }}&isbn={{ isbn|urlencode }}&page={{ page.previous_page_number }}" title="Previous page" class="prev">
-        <img src="{{ MEDIA_URL }}png/icons/list-arrow-left.png" alt="&#8592;"/>
-    </a>
-{% endif %}
+<div class="note">
     Showing results {{ page.start_index }} to {{ page.end_index }} of {{ paginator.object_list|length }}. Page {{ page.number }} of {{ paginator.num_pages }}.
 {% if page.has_next %}
     <a href="?title={{ title|urlencode }}&author={{ author|urlencode }}&isbn={{ isbn|urlencode }}&page={{ page.next_page_number }}" title="Next page" class="next">
-        <img src="{{ MEDIA_URL }}png/icons/list-arrow.png" alt="&#8594;"/>
+        Next
     </a>
 {% endif %}
 </div>
-
 </div>
 
 {% endif %}
