--- a/tags/0.2/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/base.xhtml
@@ -1,15 +1,15 @@
 {% load portal_misc %}<!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB" manifest="{{ MEDIA_URL }}cache/devices/iphone.manifest" >
-  <head>
-{# iPhone specific title to fit on home screen - code should perhaps be moved elsewhere? #}
-	<title>{% block title %}Mobile{% if not device|device_has_parent:"apple_iphone_ver1" %} {% endif %}Oxford{% endblock %}</title>
-	
-    <meta name="viewport" content="width=device-width; user-scalable=no; maximum-scale=1; minimum-scale=1" />
+{# <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB" manifest="{{ MEDIA_URL }}cache/devices/iphone.manifest" > #}
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB" >
+<head>
+	<title>{% block title %}m.ox | {{ breadcrumbs.4 }}{% endblock %}</title>
+    <meta name="viewport" content="width=device-width; initial-scale=1; user-scalable=no; maximum-scale=1; minimum-scale=1"/>
+
 
 {% if device|device_has_parent:"apple_iphone_ver1" %}
     <link rel="apple-touch-icon" href="{{ MEDIA_URL}}png/apple-touch-icon.png"/>
     <link rel="apple-touch-startup-image" href="{{ MEDIA_URL}}png/apple-touch-startup-image.jpg">
-
 	<meta name="apple-mobile-web-app-capable" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	<meta name="format-detection" content="telephone=no" />
@@ -20,40 +20,54 @@
     <script src="{{ MEDIA_URL }}js/groups/{{ style_group }}.js"  type="text/javascript"> </script>
 {% endifnotequal %}
     <link  rel="stylesheet" href="{{ MEDIA_URL }}css/groups/{{ style_group }}.css" type="text/css" />
-
-
 	<link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
+{% block extrahead %}{% endblock %}
+</head>
 
-    {% block extrahead %}{% endblock %}
-    
-  </head>
+<body>
 
-  <body class="{% if touch %} touch{% endif %}{% if multitouch %} multitouch{% endif %}{% if desktop %} desktop{% endif %}{% if smart %} smart{% endif %}">
 
-{% if 1 %}
 {% block header %}
-    <div class="header">
-{% if 1 or touch or desktop   %}
-        <ol class="breadcrumbs">
-{% block breadcrumbs %}
-            <li><a href="{% url core_index %}">
-                {% if dumb %}Home{% else %}<img src="{{ MEDIA_URL }}png/logo.png" alt="Home"/>{% endif %}
-            </a></li>
-{% endblock %}
-        </ol>
-        <h1 id="page_title" class="{% block pagetitleclass %}{% endblock %}">{% block pagetitle %}{% endblock %}</h1>
-{% endif %}
-    </div>
-{% endblock %}
+<div id="bc-header">
+	<ol id="bc">	
+		<li><a href="{% url core_index %}">
+	        <img src="{{ MEDIA_URL }}png/logo.png" alt="Home"/>
+        </a></li>
+{% if breadcrumbs.2 %}
+        <li><a href="{{ breadcrumbs.1.1 }}" title="{{ breadcrumbs.1.0 }}">
+            <img src="{{ MEDIA_URL }}png/index-icons/{{ breadcrumbs.0 }}-bc.png" alt="{{ breadcrumb.1.0 }}"/>
+        </a></li>
+{% if not breadcrumbs.3 %}
+        <li><a href="{{ breadcrumbs.2.1 }}" title="{{ breadcrumbs.2.0 }}">
+            &hellip;
+        </a></li>
 {% endif %}
 
-    <div class="content">
+{% endif %}
+
+    </ol> 
+    <h1 id="bc-title" class="{% if not breadcrumbs.2 %}{{ breadcrumbs.0 }}-header with-icon{% endif %}">
+		{{ breadcrumbs.4 }}
+	</h1>
+	
+	{{ breadcrumbs }}
+</div>
+
+
+
+{% endblock %}
+
+
+<div class="content">
+
 
 {% if unread_user_messages %}    
-    <div class="front-section">
-      <a href="{% url core_messages %}" style="font-size:1.2em; padding:1em 0.2em; display:block;">
+    <div class="section" style="padding:10px;">
+		<div class="bubble pad-10">
+      	<a href="{% url core_messages %}" style="font-size:1.2em; padding:1em 0.2em; display:block;">
         You have a message from the developers!
-      </a>
+      	</a>
+		</div>
     </div>
 {% endif %}
 
@@ -61,23 +75,12 @@
 {% endblock %}
 
 {% if not hide_feedback_link %}
-    <div class="front-section">
-        <a href="{% url core_contact %}?referer={{ path }}">Provide feedback for this page.</a><br />
+    <div class="bubble pad-10">
+        <a href="{% url core_feedback %}?referer={{ path }}">Provide feedback for this page.</a><br />
 		<a href="http://chart.apis.google.com/chart?cht=qr&amp;chs={{ device.max_image_width }}x{{ device.max_image_width }}&amp;chl=http://m.ox.ac.uk{{ path }}">2D Barcode for this page</a>
     </div>
 {% endif %}
 
-{#<hr/><p>{{ dumb|yesno:"dumb," }} {{ smart|yesno:"smart," }} {{ touch|yesno:"touch," }} {{ desktop|yesno:"desktop," }}</p>#}
-
-    </div>
-{% comment %}
-    <table>
-        <tbody>
-{% for query in queries %}
-            <tr><td>{{ query.sql }}</td><td>{{ query.time }}</td></tr>
-{% endfor %}
-        </tbody>
-    </table>
-{% endcomment %}
-  </body>
+</div>
+</body>
 </html>
