--- a/tags/0.2/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -1,10 +1,5 @@
 {% extends "contact/base.xhtml" %}{% load portal_misc %}
 
-{% block stylesheets %}
-{{ block.super }}
-<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/contact.css"/>
-{% endblock %}
-
 {% block title %}m.ox | Contact search{% if query %}: {{ query }}{% endif %}{% endblock %}
 
 {% block extrahead %}{{ block.super }}
@@ -20,143 +15,145 @@
 <script type="text/javascript" src="{{ MEDIA_URL }}js/contact.js"> </script>
 {% endblock %}
 
+
 {% block pagetitleclass %}contact-header with-icon{% endblock %}
 {% block pagetitle %}Contact search{% endblock %}
 
 {% block content %}
-
-<div class="section-nopad">
+<div class="section">
+  <div class="form">	
   <form method="get" action=".">
-    <h2 class="section-header">
-      <label for="query">Search</label>
+    <h2>
+      <label for="id_query">Search</label>
     </h2>
-
-    <div class="section-content">
-      <p style="text-align:center">
-        <input id="query" name="q" value="{{ query }}" style="width:90%; height:20px; font-size:16pt"/>
-      </p><p style="text-align:center">
-        <button type="submit" name="method" value="email">E-mail</button>
-        <button type="submit" name="method" value="phone">Phone</button>
-      </p>
-    </div>
+	<p>
+	  <input id="id_query" name="q" value="{{ query }}"/>
+	</p>
+	<p>
+	  <button type="submit" name="method" value="email">E-mail</button>
+	  <button type="submit" name="method" value="phone">Phone</button>
+	</p>
   </form>
+  </div>
 </div>
 
 {% if query %}
+	<div class="section">
+	  <h2>Results</h2>
+	  {% if message %}
+		  <div class="bubble"><div class="note pad-10">
+		   	 {{ message }}
+		  </div></div>
+	  {% endif %}
 
-<div class="list-section">
-  <h2 class="section-header">Results</h2>
+	  {% if people %}
+	  	
+		  {% if page_count|gte:4 %}<div class="bubble"><div class="note pad-10">
+		  Your search returned {{results_count}} item{{ results_count|pluralize }}. Try adding an initial to get more specific results.</div></div>
+		  {% else %}<div class="bubble"><div class="note pad-10">
+		  Your search returned {{results_count}} item{{ results_count|pluralize }}.</div></div>
+	  	  {% endif %}
+
+	 
+	 {% ifnotequal 1 page_count %}
+     <div class="note">
+  				  Pages:
+				    {% for page in pages %}<a href="?page={{ page }}&amp;method={{ method }}&amp;q={{ query|urlencode }}" style="padding:0 7px 0 0;">{{ page }}</a>
+				    {% endfor %}
+				    {% if more_pages %}
+				    <a href="?page={{ page|add:1 }}&amp;method={{ method }}&amp;q={{ query|urlencode }}" style="display:inline;">Next >></a>
+				    {% endif %}
+	  </div>
+	  {% endifnotequal %}
 
 
-  {% if message %}
-  <div class="list-note"><div class="bubble">
-    {{ message }}
-  </div></div>
-  {% endif %}
 
-  {% if people %}
-  <div class="list-note"><div class="bubble">
-    {% if page_count|gte:4 %}
-    Your search returned {{results_count}} item{{ results_count|pluralize }}. Try adding an initial to get more specific results.
-	{% else %}
-    Your search returned {{results_count}} item{{ results_count|pluralize }}.
-    {% endif %}
-  </div></div>
+	  <ul id="people">
+	    {% for person in people %}
+	    <li{% if forloop.last %} class="round-bottom"{% endif %}>
+	      {% ifequal method "email" %}
+	      <a class="email" href="mailto:{{ person.email }}">
+	      {% else %}
+	      <a class="phone" href="{{ person.phone.1|telephone_uri }}">
+	      {% endifequal %}
+	        {{ person.name }}
+	        <br/>
+	        <small>{% if person.unit %}{{ person.unit }}{% else %}<em>Unknown affiliation</em>{% endif %}<br />
+			{% ifequal method "email" %}
+			    {{ person.email }}
+	        {% else %}
+			    {{ person.phone.1 }}
+			{% endifequal %}
+			</small>
+	      </a>
+	    </li>
+	    {% endfor %}
+	  </ul>
 
-    {% ifnotequal 1 page_count %}
-  <div class="list-note">
-      Pages:
-          {% for page in pages %}
-      <a href="?page={{ page }}&amp;method={{ method }}&amp;q={{ query|urlencode }}" style="display:inline;">{{ page }}</a>
-          {% endfor %}
-  </div>
-    {% endifnotequal %}
 
-  <ul class="ml" id="people">
-    {% for person in people %}
-    <li{% if forloop.last %} class="notbottom"{% endif %}>
-      {% ifequal method "email" %}
-      <a class="email" href="mailto:{{ person.email }}">
-      {% else %}
-      <a class="phone" href="{{ person.phone.1|telephone_uri }}">
-      {% endifequal %}
-        <span class="name">{{ person.name }}</span>
-        <br/>
-        <small><span class="unit">{% if person.unit %}{{ person.unit }}{% else %}<em>Unknown affiliation</em>{% endif %}</span><br />
-		{% ifequal method "email" %}
-		    {{ person.email }}
-        {% else %}
-		    {{ person.phone.1 }}
-		{% endifequal %}
-		</small>
-      </a>
-    </li>
-    {% endfor %}
-  </ul>
+	  {% ifnotequal 1 page_count %}
+	  <div class="note" id="more_contact_results">
+	      Pages:
+	          {% for page in pages %}
+	      <a href="?page={{ page }}&amp;method={{ method }}&amp;q={{ query|urlencode }}" style="padding:0 7px 0 0;">{{ page }}</a>
+	          {% endfor %}
+			{% if more_pages %}
+	          <a href="?page={{ page|add:1 }}&amp;method={{ method }}&amp;q={{ query|urlencode }}" style="display:inline;">Next >></a>
+	  		  {% endif %}
+	  </div>
+	  {% endifnotequal %}
 
-    {% ifnotequal 1 page_count %}
-  <div class="list-footer" id="more_contact_results">
-      Pages:
-          {% for page in pages %}
-      <a href="?page={{ page }}&amp;method={{ method }}&amp;q={{ query|urlencode }}" style="display:inline;">{{ page }}</a>
-          {% endfor %}
-  </div>
-    {% endifnotequal %}
 
-  {% else %}{% if not message %}
-  <div class="list-footer"><div class="bubble">
-    Your search didn't return any results.
-  </div></div>
-  {% endif %}
-  {% endif %}
-</div>
+	  {% else %}{% if not message %}
+	  <div class="note"><div class="bubble pad-10">
+	    Your search didn't return any results.
+	  </div></div>
+	  {% endif %}
+	  {% endif %}
+	</div>
 {% endif %}
 
 {% if not query %}
+	<div class="section">
+	<h2>University contacts</h2>
+	<ul>
+	    <li><a class="phone" href="tel:+441865270000">General enquiries<br /><small>01865 (2)70000</small></a></li>
+	    <li><a class="phone" href="tel:+441865280000">Switchboard<br /><small>01865 (2)80000</small></a></li>
+	    <li class="round-bottom"><a class="phone" href="tel:+441865273200">Computing Services help desk<br /><small>01865 (2)73200</small></a></li>
+	</ul>
+	</div>
 
-<div class="list-section">
-<h2 class="section-header">University contacts</h2>
-<ul class="ml">
-    <li><a class="phone" href="tel:+441865270000">General enquiries<br /><small>01865 (2)70000</small></a></li>
-    <li><a class="phone" href="tel:+441865280000">Switchboard<br /><small>01865 (2)80000</small></a></li>
-    <li><a class="phone" href="tel:+441865273200">Computing Services help desk<br /><small>01865 (2)73200</small></a></li>
-</ul>
-</div>
+	<div class="section">
+	<h2>Emergency contacts</h2>
+	<ul>
+	    <li><a class="phone" href="tel:112">Emergency services<br /><small>112</small></a></li>
+	    <li><a class="phone" href="tel:+441865289999">University security <small>(emergency)<br />01865 (2)89999</small></a></li>
+	    <li><a class="phone" href="tel:+441865272944">University security <small>(enquiries)<br />01865 (2)72944</small></a></li>
+	    <li class="round-bottom"><a class="phone" href="tel:+448458505505">Thames Valley Police <small>(non-emergency)<br />08458 505505</small></a></li>
+	</ul>
+	</div>
 
-<div class="list-section">
-<h2 class="section-header">Emergency contacts</h2>
-<ul class="ml">
-    <li><a class="phone" href="tel:112">Emergency services<br /><small>112</small></a></li>
-    <li><a class="phone" href="tel:+441865289999">University security <small>(emergency)<br />01865 (2)89999</small></a></li>
-    <li><a class="phone" href="tel:+441865272944">University security <small>(enquiries)<br />01865 (2)72944</small></a></li>
-    <li><a class="phone" href="tel:+448458505505">Thames Valley Police <small>(non-emergency)<br />08458 505505</small></a></li>
-</ul>
-</div>
-
-<div class="list-section">
-<h2 class="section-header">Health and welfare</h2>
-<ul class="ml">
-    <li><a class="phone" href="tel:+448454647">NHS Direct<br /><small>0845 46 47</small></a></li>
-    <li><a class="phone" href="tel:+441865270300">Counselling Service<br /><small>01865 (2)70300</small></a></li>
-    <li><a class="phone" href="tel:+441865270270">Oxford Nightline<br /><small>01865 (2)70270</small></a></li>
-    <li><a class="phone" href="tel:+441865726295">Rape Crisis<br /><small>01865 726295</small></a></li>
-    <li><a class="phone" href="tel:+448457909090">Samaritans<br /><small>08457 90 90 90</small></a></li>
-</ul>
-</div>
+	<div class="section">
+	<h2>Health and welfare</h2>
+	<ul>
+	    <li><a class="phone" href="tel:+448454647">NHS Direct<br /><small>0845 46 47</small></a></li>
+	    <li><a class="phone" href="tel:+441865270300">Counselling Service<br /><small>01865 (2)70300</small></a></li>
+	    <li><a class="phone" href="tel:+441865270270">Oxford Nightline<br /><small>01865 (2)70270</small></a></li>
+	    <li><a class="phone" href="tel:+441865726295">Rape Crisis<br /><small>01865 726295</small></a></li>
+	    <li class="round-bottom"><a class="phone" href="tel:+448457909090">Samaritans<br /><small>08457 90 90 90</small></a></li>
+	</ul>
+	</div>
   
-{% comment %}  
-
-{# Update to retrieve College/Department contacts #}
-<div class="list-section">
-<h2 class="section-header">Other contacts</h2>
-<ul class="ml">
-    <li class="email"><a href="{% url contact_quick %}">College contacts</a></li>
-    <li><a href="{% url contact_quick %}">Department contacts</a></li>
-</ul>
-</div>
-{% endcomment %}
-
-
+			{% comment %}  
+			{# Update to retrieve College/Department contacts #}
+			<div class="section">
+			<h2>Other contacts</h2>
+			<ul>
+			    <li class="email"><a href="{% url contact_quick %}">College contacts</a></li>
+			    <li><a href="{% url contact_quick %}">Department contacts</a></li>
+			</ul>
+			</div>
+			{% endcomment %}
 {% endif %}
 
 {% endblock %}
