--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -2,100 +2,96 @@
 {% load portal_misc %}{% load maps %}
 
 {% block stylesheets %}
-{{ block.super }}
-    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/core/index.css"/>
-{% if touch or desktop %}
-    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/core/index-buttons.css"/>
-{% endif %}
+
 {% endblock %}
+
 
 {% block header %}
-    <div id="title">
-<!--        <img src="{{ MEDIA_URL }}png/headers/{{ device.resolution_width|header_width }}.png" alt="Mobile Oxford"/> -->
-        <img src="{{ MEDIA_URL }}png/header-logo.png" alt="Mobile Oxford"/>
+<div id="index-header">
+    <div id="index-title">
+		<!-- <img src="{{ MEDIA_URL }}png/headers/{{ device.resolution_width|header_width }}.png" alt="Mobile Oxford"/> -->
+        <img src="{{ MEDIA_URL }}png/new/logos/logo-128x51-TRMargin-5px.png" alt="Mobile Oxford"/>
     </div>
+    <div id="index-search">
+	     <form method="get" action="{% url googlesearch_index %}">
+		 <p>
+			{{ search_form.query }}
+			<input alt="Search" type="image" src="{{ MEDIA_URL }}png/new/buttons/search-button.png" title="Search" />
+		 </p>
+		 </form>
+	</div>
+</div>	
 {% endblock %}
 
+
+
 {% block content %}
-
-    <div class="front-section">
-    <ol class="icon-menu">
-{% for link in front_page_links %}
-      <li id="menu-{{ link.slug }}">
-          <a accesskey="{{ forloop.counter }}" href="{{ link.url }}">{{ link.title }}</a>
-      </li>
-{% endfor %}
-    </ol>
-    <div class="clearhidden"> </div>
-    
+    <div class="bubble">
+	<div class="center">
+    	<ol class="icon-menu">
+	      {% for link in front_page_links %}
+	          <li id="menu-{{ link.slug }}">
+	              <a accesskey="{{ forloop.counter }}" href="{{ link.url }}">{{ link.title }}</a>
+	          </li>
+	      {% endfor %}
+	    </ol>
+        {# Only necessary if using floating icons #}
+        {# <div class="clearhidden"> </div> #}
+    </div>
     </div>
     
-    <div class="section-nopad">
-      <div class="section-content">
-        <form method="get" action="{% url googlesearch_index %}">
-         <p style="text-align:center">
-           {{ search_form.query }}
-           <input type="submit" value="Search"/>
-         </p>
-        </form>
-      </div>
-    </div>
-
-    <div class="list-section">
-        <ul class="ml">
-              
-{#            <li><a href="/help/">Using this site</a></li>#}
-{#            <li><a href="/customise/">Customise this page</a></li>#}
-{#            <li><a href="{% url core_update_location %}">Location-finding preferences</a></li> #}
-            <li class="top"><a href="{% url core_static_about %}">About this site</a></li>
-            <li><a href="{% url core_contact %}?referer={% url core_index %}">Provide feedback</a></li>
-{% if has_user_messages %}
+    <ul class="stand-alone">
+            <li class="round-top"><a href="{% url core_static_about %}">About this site</a></li>
+			{% if has_user_messages %}
             <li><a href="{% url core_messages %}">Read messages from the developers</a></li>
-{% endif %}            
-{#            <li><a href="/legal/">Legal</a></li>#}
+			{% endif %}
+            <li class="round-bottom"><a href="{% url core_feedback %}?referer={% url core_index %}">Provide feedback</a></li>
+    </ul>
+    <div class="center">
+    <div class="bubble" style="padding:8px;">
+        <img src="{{ MEDIA_URL }}png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
+        <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="University of Oxford" />
+    </div>
+    </div>
 
-        </ul>
-    </div>
-    
-    <div class="section-nopad">
-        <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="University of Oxford" style="float:right;"/>
-        <img src="{{ MEDIA_URL }}png/oucs-logo-small.png" alt="Oxford University Computing Services" style="float:right;"/>
-    </div>
-<!--
-    <div class="section">
-        <h3>{{ session_key }}</h3>
-    </div>
--->
 {% if user.is_superuser %}
-    <hr/>
-    <div class="section">
-        <h2>Session</h2>
-        <p>{{ session }}</p>
-    </div>
+        <hr/>
+        <div class="section">
+            <h2>Session</h2>
+			<div class="bubble pad-10">
+            <p>{{ session }}</p>
+			</div>
+        </div>
 
-    <hr/>
-    <div class="section">
-        <h2>Device</h2>
-        <p>{{ device.brand_name }} {{ device.model_name }} ({{ device.devid }})</p>
-        <p>{{ device.devua }}</p>
-        <p>{{ ua }}</p>
-    </div>
+        <hr/>
+        <div class="section">
+            <h2>Device</h2>
+			<div class="bubble pad-10">
+            <p>{{ device.brand_name }} {{ device.model_name }} ({{ device.devid }})</p>
+            <p>{{ device.devua }}</p>
+            <p>{{ ua }}</p>
+			</div>
+        </div>
     
-    <hr/>
-    <div class="section">
-        <h2>Meta</h2>
-        <dl>
-{% for a,b in meta.items %}
-            <dt>{{ a }}</dt>
-            <dd>{{ b }}</dd>
-{% endfor %}
-        </dl>
-    </div>
+        <hr/>
+        <div class="section">
+            <h2>Meta</h2>
+			<div class="bubble pad-10">
+            <dl>
+    {% for a,b in meta.items %}
+                <dt>{{ a }}</dt>
+                <dd>{{ b }}</dd>
+    {% endfor %}
+            </dl>
+		    </div>
+        </div>
     
-    <div class="list-section">
-        <h2>Preferences</h2>
-        <p>{{ preferences }}</p>
-    </div>
-            
+        <div class="section">
+            <h2>Preferences</h2>
+			<div class="bubble pad-10">
+            <p>{{ preferences }}</p>
+			</div>
+        </div>        
 {% endif %}
+
 {% endblock %}
