--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/require_location.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/require_location.xhtml
@@ -5,10 +5,10 @@
 
 {% block content %}
 
-<div class="list-section">
-  <h2 class="section-header">Location required</h2>
+<div class="section">
+  <h2>Location required</h2>
 
-  <div class="list-note"><div class="bubble">
+  <div class="note"><div class="bubble pad-10">
     To be able to use this feature you need to <a href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">choose a location</a>.
   </div></div>
 </div>
