--- a/tags/0.2/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -10,11 +10,9 @@
     <script type="text/javascript">
         last = {{ services_json|safe }};
     </script>
-{% if touch or desktop %}
-    {#<script type="text/javascript" src="{{ MEDIA_URL}}js/jquery-color-1.0.js"> </script>#}
-    <script type="text/javascript" src="{{ MEDIA_URL}}js/busstop.js"> </script>
-{% endif %}
+{#    <script type="text/javascript" src="{{ MEDIA_URL}}js/busstop.js"> </script> #}
 {% endblock %}
+
 
 {% block breadcrumbs %}
 {{ block.super }}
@@ -28,8 +26,8 @@
 
 {% block content %}
 
-<div class="list-section">
-	<h2 class="section-header"><small>{{ entity.title }}<br /><span id="time_now">{% now "G:i:s "%}</span></small></h2>
+<div class="section">
+	<h2><small>{{ entity.title }}<br /><span id="time_now">{% now "G:i:s "%}</span></small></h2>
 
 	
 {% if services %}
@@ -57,19 +55,17 @@
 
 
 {% else %}
-<div class="list-note">
-    <div class="bubble">
+<div class="note"><div class="bubble pad-10">
         Sorry, there is currently no bus time information for this stop.
-    </div>
-</div>
+</div></div>
 {% endif %}
 
 <div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ device.max_image_height }}px">
 {% include "maps/map_elements.xhtml" %}
 </div>
 
-<ul class="ml">
-    <li>
+<ul>
+    <li class="round-bottom">
     <a href="{% url maps_entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a>
     </li>
 </ul>
