--- a/tags/0.2/mobile_portal/mobile_portal/templates/maps/busstop_search.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/maps/busstop_search.xhtml
@@ -12,43 +12,46 @@
 
 {% block content %}
 
-<div class="section-nopad">
+
+{% if search_form.is_valid %}
+	<div class="section">
+	  <h2>Results</h2>
+	{% if entities %}
+	  <ul>
+	{% for entity in entities %}
+	    <li{% if forloop.last %} class="round-bottom"{% endif %}>
+	      <a href="{{ entity.get_absolute_url }}">
+	          {{ entity.title }}      
+	      </a>
+	    </li>
+	{% endfor %}
+	  </ul>
+	{% else %}
+	<div class="note"><div class="bubble pad-10">Sorry; your search returned no results.</div></div>
+	{% endif %}
+	</div>
+{% endif %}
+
+<div class="section">
+	<div class="form">
   <form method="get" action=".">
-    <h2 class="section-header">
+    <h2>
       {{ search_form.id.label }}
     </h2>
-    <div class="list-note"><div class="bubble"><label for="busstop_id">
+    <div class="note"><div class="bubble pad-10"><label for="busstop_id">
         Enter an 8-digit oxontime code, or a central stop number (e.g. 'F3')
     </label></div></div>
-    <div class="section-content">
       <p style="text-align:center">
         {{ search_form.id }}
         <input type="submit" value="Search"/>
       </p>
-      <!--<p>{{ search_form.application }}</p>-->
-    </div>
+
   </form>
+	</div>
 </div>
 
-{% if search_form.is_valid %}
-<div class="list-section">
-  <h2 class="section-header">Results</h2>
-{% if entities %}
-  <ul class="ml">
-{% for entity in entities %}
-    <li>
-      <a href="{{ entity.get_absolute_url }}">
-          {{ entity.title }}      
-      </a>
-    </li>
-{% endfor %}
-  </ol>
-</div>
-{% else %}
-<div class="list-note"><div class="bubble">Sorry; your search returned no results.</div></div>
-{% endif %}
 
 
-{% endif %}
+
 
 {% endblock %}
