--- a/tags/0.2/mobile_portal/mobile_portal/templates/maps/category_detail.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/maps/category_detail.xhtml
@@ -16,9 +16,8 @@
 
 {% block content %}
 
-<div class="list-section">
-
-  <h2 class="section-header">
+<div class="section">
+  <h2>
     Found {{ count }}
     {% ifequal count 1 %}
       {{ entity_types.0.verbose_name }}
@@ -34,8 +33,7 @@
   </h2>
 
 {% if found_entity_types %}
-  <div class="list-note">
-    <div class="bubble">
+  <div class="note"><div class="bubble pad-10">
       Limit to:
 {% for et in found_entity_types %}
 {% if entity_types.0.sub_types.all|contains:et %}
@@ -48,9 +46,9 @@
   </div>
 {% endif %}
 
-<ul class="ml">
+<ul>
 {% for entity in entities %}
-    <li><a href="{{ entity.get_absolute_url }}">
+    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{{ entity.get_absolute_url }}">
       {{ entity.title|capfirst }}{% if multiple_entity_types %}<br/>
       <small>{{ entity.entity_type|capfirst }}</small>{% endif %}
     </a></li>
