--- a/tags/0.2/mobile_portal/mobile_portal/templates/maps/entity_without_location.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/maps/entity_without_location.xhtml
@@ -16,9 +16,9 @@
 
 {% block content %}
 
-<div class="section-nopad">
-  <h2 class="section-header">{{ entity_type.verbose_name_plural }} near {{ entity.title }}</h2>
-  <div class="section-content"><div class="bubble">
+<div class="section">
+  <h2>{{ entity_type.verbose_name_plural }} near {{ entity.title }}</h2>
+  <div class="note"><div class="bubble pad-10">
     Unfortunately, we do not have a location for this object, and so cannot tell you what is near it.
   </div>
 </div>
