--- a/tags/0.2/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
@@ -16,118 +16,103 @@
 
 {% block content %}
 
+<div class="section">
+	<h2>{{ data.dc_title }}</h2>
 
-<div class="list-section">
-<h2 class="section-header">{{ data.dc_title }}</h2>
+	<dl>
+	{% if data.oxp_hasHomepage or data.oxp_hasITHomepage or data.oxp_hasWeblearn or data.oxp_hasLibraryHomepage %}
+		<dt>Websites</dt>
+		{% if data.oxp_hasHomepage %}
+		    <dd><a href="{{ data.oxp_hasHomepage.uri }}">Homepage</a></dd>
+		{% endif %}
+		{% if data.oxp_hasITHomepage %}
+		    <dd><a href="{{ data.oxp_hasITHomepage.uri }}">IT Homepage</a></dd>
+		{% endif %}
+		{% if data.oxp_hasWeblearn %}
+		    <dd><a href="{{ data.oxp_hasWeblearn.uri }}">Weblearn</a></dd>
+		{% endif %}
+		{% if data.oxp_hasLibraryHomepage %}
+		    <dd><a href="{{ data.oxp_hasLibraryHomepage.uri }}">Library</a></dd>
+		{% endif %}
+	{% endif %}
 
 
-<dl class="ml">
+	{% if data.oxp_occupies %}
+		<dt>Occupies</dt>
+		{% for place in data.oxp_occupies %}
+		{% with place|load_oxp_json as place_json %}
+		    <dd><a href="{{ place_json|oxp_portal_url }}">{{ place_json.dc_title }}</a></dd>
+		{% endwith %}
+		{% endfor %}
+	{% endif %}
 
-{% if data.oxp_hasHomepage or data.oxp_hasITHomepage or data.oxp_hasWeblearn or data.oxp_hasLibraryHomepage %}
-<dt>Websites</dt>
+	{% if data.passiveProperties.oxp_occupies %}
+		<dt>Occupied by</dt>
+		{% for place in data.passiveProperties.oxp_occupies %}
+		{% with place|load_oxp_json as place_json %}
+		    <dd><a href="{{ place_json|oxp_portal_url }}">{{ place_json.dc_title }}</a></dd>
+		{% endwith %}
+		{% endfor %}
+	{% endif %}
 
-{% if data.oxp_hasHomepage %}
-    <dd><a href="{{ data.oxp_hasHomepage.uri }}">Homepage</a></dd>
-{% endif %}
-{% if data.oxp_hasITHomepage %}
-    <dd><a href="{{ data.oxp_hasITHomepage.uri }}">IT Homepage</a></dd>
-{% endif %}
-{% if data.oxp_hasWeblearn %}
-    <dd><a href="{{ data.oxp_hasWeblearn.uri }}">Weblearn</a></dd>
-{% endif %}
-{% if data.oxp_hasLibraryHomepage %}
-    <dd><a href="{{ data.oxp_hasLibraryHomepage.uri }}">Library</a></dd>
-{% endif %}
-{% endif %}
+	{% if data.oxp_subsetOf %}
+		<dt>Parent unit</dt>
+		{% with data.oxp_subsetOf|load_oxp_json as place_json %}
+		<dd><a href="{{ place_json|oxp_portal_url }}">{{ place_json.dc_title }}</a></dd>
+		{% endwith %}
+	{% endif %}
 
-{% if data.oxp_occupies %}
-<dt>Occupies</dt>
+	{% if data.passiveProperties.oxp_subsetOf %}
+		<dt>Sub-units</dt>
+		{% for place in data.passiveProperties.oxp_subsetOf %}
+		{% with place|load_oxp_json as place_json %}
+		    <dd><a href="{{ place_json|oxp_portal_url }}">{{ place_json.dc_title }}</a></dd>
+		{% endwith %}
+		{% endfor %}
+	{% endif %}
 
-{% for place in data.oxp_occupies %}
-{% with place|load_oxp_json as place_json %}
-    <dd><a href="{{ place_json|oxp_portal_url }}">{{ place_json.dc_title }}</a></dd>
-{% endwith %}
-{% endfor %}
+	{% if data.oxp_physicallyContainedWithin %}
+		<dt>Contained within</dt>
+		{% with data.oxp_physicallyContainedWithin|load_oxp_json as place_json %}
+		    <dd><a href="{{ place_json|oxp_portal_url }}">{{ place_json.dc_title }}</a></dd>
+		{% endwith %}
+	{% endif %}
 
-{% endif %}
-
-{% if data.passiveProperties.oxp_occupies %}
-<dt>Occupied by</dt>
-
-{% for place in data.passiveProperties.oxp_occupies %}
-{% with place|load_oxp_json as place_json %}
-    <dd><a href="{{ place_json|oxp_portal_url }}">{{ place_json.dc_title }}</a></dd>
-{% endwith %}
-{% endfor %}
-
-{% endif %}
-
-{% if data.oxp_subsetOf %}
-<dt>Parent unit</dt>
-{% with data.oxp_subsetOf|load_oxp_json as place_json %}
-<dd><a href="{{ place_json|oxp_portal_url }}">{{ place_json.dc_title }}</a></dd>
-{% endwith %}
-{% endif %}
-
-{% if data.passiveProperties.oxp_subsetOf %}
-<dt>Sub-units</dt>
-
-{% for place in data.passiveProperties.oxp_subsetOf %}
-{% with place|load_oxp_json as place_json %}
-    <dd><a href="{{ place_json|oxp_portal_url }}">{{ place_json.dc_title }}</a></dd>
-{% endwith %}
-{% endfor %}
-
-{% endif %}
-
-{% if data.oxp_physicallyContainedWithin %}
-<dt>Contained within</dt>
-
-{% with data.oxp_physicallyContainedWithin|load_oxp_json as place_json %}
-    <dd><a href="{{ place_json|oxp_portal_url }}">{{ place_json.dc_title }}</a></dd>
-{% endwith %}
-
-{% endif %}
-
-{% if data.passiveProperties.oxp_physicallyContainedWithin %}
-<dt>Contains</dt>
-
-{% for place in data.passiveProperties.oxp_physicallyContainedWithin %}
-{% with place|load_oxp_json as place_json %}
-    <dd><a href="{{ place_json|oxp_portal_url }}">{{ place_json.dc_title }}</a></dd>
-{% endwith %}
-{% endfor %}
-
-{% endif %}
-
-</dl>
+	{% if data.passiveProperties.oxp_physicallyContainedWithin %}
+		<dt>Contains</dt>
+		{% for place in data.passiveProperties.oxp_physicallyContainedWithin %}
+		{% with place|load_oxp_json as place_json %}
+		    <dd><a href="{{ place_json|oxp_portal_url }}">{{ place_json.dc_title }}</a></dd>
+		{% endwith %}
+		{% endfor %}
+	{% endif %}
+	</dl>
 </div>
 
 {% if data.oxp_inImage %}
-<div class="section-nopad">
-<h2 class="section-header">Images</h2>
-{% for image in data.oxp_inImage %}
-{% external_image image.uri asdiv %}
-{% endfor %}
+<div class="section">
+	<h2>Images</h2>
+	{% for image in data.oxp_inImage %}
+		{% external_image image.uri asdiv %}
+	{% endfor %}
 </div>
 {% endif %}
 
 
-<div class="list-section">
-    <h2 class="section-header">Map</h2>
-
-{% if entity.location %}
-    
-<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ device.max_image_height }}px">
-{% include "maps/map_elements.xhtml" %}
-</div><div class="list-footer">
-    <a href="{% url maps_entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a>
-</div>
-{% else %}
-    <div class="list-footer"><div class="bubble">
-        We do not yet have a location for this {{ entity.entity_type.verbose_name }}.
-    </div></div>
-{% endif %}
+<div class="section">
+    <h2>Map</h2>
+	{% if entity.location %}
+	<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ device.max_image_height }}px">
+		{% include "maps/map_elements.xhtml" %}
+	</div>
+	<ul>
+	    <li class="round-bottom"><a href="{% url maps_entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a></li>
+	</ul>
+	{% else %}
+	    <div class="note"><div class="bubble">
+	        We do not yet have a location for this {{ entity.entity_type.verbose_name }}.
+	    </div></div>
+	{% endif %}
 </div>
 
 
