--- a/tags/0.2/mobile_portal/mobile_portal/templates/maps/update_osm_done.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/maps/update_osm_done.xhtml
@@ -20,7 +20,7 @@
 {% block content %}
 
 <div class="section-nopad">
-  <h2 class="section-header">Thank you</h2>
+  <h2>Thank you</h2>
   
   <div class="section-content" style="text-align:left;">
     <p>
