--- a/tags/0.2/mobile_portal/mobile_portal/templates/podcasts/podcast_detail.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/podcasts/podcast_detail.xhtml
@@ -20,16 +20,15 @@
 
 {% block content %}
 
-<div class="section-nopad">
-    <h2 class="section-header">{{ podcast.title }}</h2>
+<div class="section">
+    <h2>{{ podcast.title }}</h2>
     
-    <div class="section-content">{{ podcast.description|safe }}</div>
-</div>
+    <div class="note"><div class="bubble pad-10">{{ podcast.description|safe }}</div></div>
+
 
 {% for item in items %}
 
-<div class="section-nopad">
-    <h3 class="section-header">{{ item.title }}</h3>
+    <h3>{{ item.title }}</h3>
     
     <table class="section-table">
         <tbody>
@@ -41,7 +40,7 @@
     {% endif %}
             <tr>
                 <th>Published:</th>
-                <td>{{ item.published_date|date:"D j M Y, g:i A" }}</td>
+                <td>{{ item.published_date|date:"j M Y" }}</td>
             </tr>
         </tbody>
     </table>
@@ -66,8 +65,9 @@
     {% endfor %}
         </tbody>
     </table>
-</div>
+
 
 {% endfor %}
+</div>
 
 {% endblock %}
