--- a/tags/0.2/mobile_portal/mobile_portal/templates/results/index.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/results/index.xhtml
@@ -7,23 +7,23 @@
 
 {% block content %}
 
-<div class="section-nopad">
-    <h2 class="section-header">About results releases</h2>
-    <div class="section-content">
+
+<div class="section">
+    <h2>About results releases</h2>
+    <div class="note"><div class="bubble pad-10">
         This page lists the last twenty schools to have had results released. You can check your results using Student Self-Service from a desktop browser.
-    </div>
+    </div></div>
 </div>
 
 
 {% regroup items by pubDate as is %}
 {% for g in is %}
-	<div class="list-section">
-	<h2 class="section-header">{{ g.grouper|date:"d M Y" }}</h2>
-	<ul class="ml">
+	<div class="section">
+	<h2>{{ g.grouper|date:"d M Y" }}</h2>
+	<ul>
 {% for item in g.list %}
-<li class="non-link-item">
-{{ item.code }}: {{ item.title }}
-</li>
+	<li {% if forloop.last %}class="round-bottom"
+	{% endif %}>{{ item.code }}: {{ item.title }}</li>
 {% endfor %}
 	</ul></div>
 {% endfor %}
