--- a/tags/0.2/mobile_portal/mobile_portal/templates/rss/index.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/rss/index.xhtml
@@ -6,11 +6,11 @@
 
 {% block content %}
 
-<div class="list-section">
-    <h2 class="section-header">Feeds</h2>
-    <ul class="ml">
+<div class="section">
+    <h2>Feeds</h2>
+    <ul>
 {% for feed in feeds %}
-        <li>
+        <li {% if forloop.last %}class="round-bottom"{% endif %}>
             <a href="{{ feed.get_absolute_url }}">{{ feed.title }}</a>
         </li>
 {% endfor %}
