--- a/tags/0.2/mobile_portal/mobile_portal/templates/z3950/item_holdings_detail.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/z3950/item_holdings_detail.xhtml
@@ -16,7 +16,7 @@
 {% block content %}
 
 <div class="section-nopad">
-    <h2 class="section-header">{{ item.title }}</h2>
+    <h2>{{ item.title }}</h2>
     <table class="section-table">
 {% if item.author %}
         <tr>
@@ -66,7 +66,7 @@
 </div>
 
 <div class="list-section">
-    <h2 class="section-header">{{ library.location|join:" - " }}</h2>
+    <h2>{{ library.location|join:" - " }}</h2>
 {% if library.oxpoints_id and library.oxpoints_location %}
     <div class="backgrounded-image" style="background-image:url('{% map_url library.oxpoints_location %}'); height:{{ device.max_image_height }}px">
         {% include "maps/map_elements.xhtml" %}
