--- a/trunk/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -12,7 +12,9 @@
     var method = "{{ method }}";
 </script>
 {% endif %}
-<script type="text/javascript" src="{{ MEDIA_URL }}js/contact.js"> </script>
+
+{#<script type="text/javascript" src="{{ MEDIA_URL }}js/contact.js"> </script> #}
+
 {% endblock %}
 
 
