--- a/trunk/mobile_portal/mobile_portal/templates/podcasts/podcast_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/podcasts/podcast_detail.xhtml
@@ -23,7 +23,7 @@
 <div class="section">
     <h2>{{ podcast.title }}</h2>
     
-    <div class="note"><div class="bubble pad-10">{{ podcast.description|safe }}</div></div>
+    <div class="article"><div class="bubble pad-10">{{ podcast.description|safe }}</div></div>
 
 
 {% for item in items %}
