--- a/trunk/mobile_portal/mobile_portal/templates/podcasts/category_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/podcasts/category_detail.xhtml
@@ -27,7 +27,7 @@ podcasts.
 
 
 {% for podcast in podcasts %}
-    <li><a href="{{ podcast.get_absolute_url }}"><span class="{{ podcast.medium }}">{{ podcast.title }} ({{ podcast.medium }})
+    <li {% if forloop.last %}class="round-bottom" {% endif %}><a href="{{ podcast.get_absolute_url }}"><span class="{{ podcast.medium }}">{{ podcast.title }} ({{ podcast.medium }})
     <br /><small>{{ podcast.description }}</small></span></a></li>
 {% endfor %}
 		</ul>
