--- a/trunk/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -14,14 +14,6 @@
 {% endblock %}
 
 
-{% block breadcrumbs %}
-{{ block.super }}
-	<li><a href="{% url maps_index %}">
-        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/index-icons/maps-bc.png" alt="Maps"/>{% endif %}
-    </a></li>
-    <li><a href="{% url maps_nearby_detail entity.entity_type.slug %}" alt="Bus stops">{% if dumb %}Bus stops{% else %}&hellip;{% endif %}</a></li>
-{% endblock %}
-
 {% block pagetitle %}Bus stop{% endblock %}
 
 {% block content %}
@@ -29,8 +21,9 @@
 <div class="section">
 	<h2><small>{{ entity.title }}<br /><span id="time_now">{% now "G:i:s "%}</span></small></h2>
 
-	
+
 {% if services %}
+<div class="article"><div class="bubble pad-5">
 <table class="section-table">
     <thead style="display:none;">
         <tr>
@@ -52,7 +45,7 @@
 {% endfor %}
     </tbody>
 </table>
-
+</div></div>
 
 {% else %}
 <div class="note"><div class="bubble pad-10">
