Further tweaks to style. Still a fair way to go.

--- a/trunk/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -1,10 +1,7 @@
 {% extends "core/base.xhtml" %}
 {% load portal_misc %}{% load maps %}
 
-{% block stylesheets %}
-
-{% endblock %}
-
+{% block title %}Mobile Oxford{% endblock %}
 
 {% block header %}
 <div id="index-header">
