Various fixes:  * Better style on z3950 pages.  * Entire request time now displayed on stdout.  * Moved weather over to new class-based view.

--- a/trunk/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/base.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB" >
 <head>
 	<title>{% block title %}m.ox | {{ breadcrumbs.4 }}{% endblock %}</title>
-    <meta name="viewport" content="width=device-width; initial-scale=1; user-scalable=no; maximum-scale=1; minimum-scale=1"/>
+    <meta name="viewport" content="width=device-width; initial-scale=1; user-scalable=yes; maximum-scale=1000; minimum-scale=1"/>
 
 
 {% if device|device_has_parent:"apple_iphone_ver1" %}
