--- a/trunk/mobile_portal/mobile_portal/templates/z3950/item_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/item_detail.xhtml
@@ -12,9 +12,10 @@
 
 {% block content %}
 
-<div class="section-nopad">
+<div class="section">
     <h2>{{ item.title }}</h2>
-    <table class="section-table">
+    <div class="article"><div class="bubble pad-5">
+    <table>
 {% if item.author %}
         <tr>
             <th>Author:</th>
@@ -39,6 +40,9 @@
             <td>{{ item.description }}</td>
         </tr>
 {% endif %}
+
+
+
 {% if item.isbns %}
 {% for isbn in item.isbns %}
         <tr>
@@ -49,6 +53,9 @@
         </tr>
 {% endfor %}
 {% endif %}
+
+
+
 {% if item.issns %}
 {% for issn in item.issns %}
         <tr>
@@ -59,13 +66,16 @@
         </tr>
 {% endfor %}
 {% endif %}
+
+
     </table>
+    </div></div>
 </div>
 
 {% if libraries %}
-<div class="list-section">
+<div class="section">
     <h2>Library holdings{% if map_hash %} by proximity{% endif %}</h2>
-    <div class="list-note"><div class="bubble">
+    <div class="note"><div class="bubble pad-10">
         Please note that all libraries have admission and borrowing policies; inclusion in this list does not imply access.{% if map_hash %} Closest results are not necessarily best.{% endif %}
     </div></div> 
 
@@ -73,40 +83,47 @@
     <div class="backgrounded-image" style="background-image:url('{% url osm_generated_map map_hash %}'); height:{{ device.max_image_height }}px;"> </div>
 {% endif %}
 
-    <ul class="ml">
+    <ul>
 {% for library, books in libraries %}
-{% if library.oxpoints_id %}
-        <li><a href="{{ library.oxpoints_entity.get_absolute_url }}">{% if map_hash %}{{ library.marker_number|default_if_none:"Not on map" }}. {% endif %}{{ library.location|join:" - " }}</a></li>
-{% else %}
-        <li class="non-link-item">{% if map_hash %}{{ library.marker_number|default_if_none:"Not on map" }}. {% endif %}{{ library.location|join:" - " }}</li>
-{% endif %}
-{% ifequal books|length 1 %}
-    <li class="subitem non-link-item">
-    Shelfmark: <em>{{ books.0.shelfmark }}</em>, availability: <em>{{ books.0.availability_display }}</em>{% if books.0.materials_specified %}, issue: <em>{{ books.0.materials_specified }}</em>{% endif %}
-    </li>
-{% else %}
-    <li class="subitem">
-      <a href="{% url z3950_item_holdings_detail control_number,library.location.1 %}">
-        {{ books|length }} items with availability at most <em>{{ library.availability_display }}</em>
-      </a>
-{% endifequal %}
+    {% if library.oxpoints_id %}
+            <li><a href="{{ library.oxpoints_entity.get_absolute_url }}">{% if map_hash %}{{ library.marker_number|default_if_none:"Not on map" }}. {% endif %}{{ library.location|join:" - " }}</a></li>
+    {% else %}
+            {# Non-link-item #}
+            <li>{% if map_hash %}{{ library.marker_number|default_if_none:"Not on map" }}. {% endif %}{{ library.location|join:" - " }}</li>
+    {% endif %}
+
+    {% ifequal books|length 1 %}
+        {# subitem non-link-item #}
+        <li>
+        Shelfmark: <em>{{ books.0.shelfmark }}</em>, availability: <em>{{ books.0.availability_display }}</em>{% if books.0.materials_specified %}, issue: <em>{{ books.0.materials_specified }}</em>{% endif %}
+        </li>
+    {% else %}
+        {# Sub item #}
+        <li>
+          <a href="{% url z3950_item_holdings_detail control_number,library.location.1 %}">
+            {{ books|length }} items with availability at most <em>{{ library.availability_display }}</em>
+          </a>
+    {% endifequal %}
 {% endfor %}
     </ul>
 </div>
 {% endif %}
 
+
 {% if stacks %}
-<div class="list-section">
+<div class="section">
     <h2>Holdings in stacks</h2>
-    <ul class="ml">
+    <ul>
 {% for library, books in stacks %}
 {% if library.oxpoints_id %}
         <li><a href="{{ library.oxpoints_entity.get_absolute_url }}">{{ forloop.counter }}. {{ library.location|join:" - " }}</a></li>
 {% else %}
-        <li class="non-link-item">{{ forloop.counter }}. {{ library.location|join:" - " }}</li>
+        {# Non Link #}
+        <li>{{ forloop.counter }}. {{ library.location|join:" - " }}</li>
 {% endif %}
         {% for book in books %}
-        <li class="subitem non-link-item">
+        {# Subitem non-link-item #}
+        <li>
         Shelfmark: <em>{{ book.shelfmark }}</em>, availability: <em>{{ book.availability_display }}</em>{% if book.materials_specified %}, issue: <em>{{ book.materials_specified }}</em>{% endif %}
         </li>
         {% endfor %}
