Map sizes now controlled from core/middleware.

--- a/trunk/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -53,7 +53,7 @@
 </div></div>
 {% endif %}
 
-<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ device.max_image_height }}px">
+<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
 {% include "maps/map_elements.xhtml" %}
 </div>
 
