--- a/trunk/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
@@ -103,7 +103,7 @@
 <div class="section">
     <h2>Map</h2>
 	{% if entity.location %}
-	<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ device.max_image_height }}px">
+	<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
 		{% include "maps/map_elements.xhtml" %}
 	</div>
 	<ul>
