--- a/trunk/mobile_portal/mobile_portal/templates/maps/osm/base.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/osm/base.xhtml
@@ -17,7 +17,7 @@
 <div class="section">
 <h2>{{ entity.title }}</h2>
 
-<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ device.max_image_height }}px">
+<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
 {% include "maps/map_elements.xhtml" %}
 </div>
 
