--- a/trunk/mobile_portal/mobile_portal/templates/maps/update_osm.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/update_osm.xhtml
@@ -8,10 +8,10 @@
 
 {% block content %}
 
-<div class="section-nopad">
+<div class="section">
   <h2>Important information</h2>
   
-  <div class="section-content" style="text-align:left;">
+  <div class="article"><div class="bubble pad-5">
     <p>
       Thank you for wanting to improve the data provided by Mobile Oxford.
       However, before you submit any changes, you should be aware of the
@@ -40,15 +40,15 @@
       You may be interested to read <a href="{% url maps_static_openstreetmap %}">further information about
       OpenStreetMap and other ways in which one may contribute</a>.
     </p>
-  </div>
+  </div></div>
 </div>
 
-<div class="section-nopad">
+<div class="section">
   <h2>Map</h2>
-  <div class="list-note"><div class="bubble">
+  <div class="note"><div class="bubble pad-10">
     You are submitting an update to the {{ entity.entity_type.verbose_name }}
     <em>&quot;{{ entity.title }}&quot;</em>.
-  </div></div>
+  </div>
   
 <div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
 {% include "maps/map_elements.xhtml" %}
@@ -56,11 +56,9 @@
 
 </div>
 
+<div class="article"><div class="bubble pad-5">
 <form method="post" action=".">
-
-<div class="front-section">
-
-    <p style="margin-top:0.5em;">
+    <p>
       Not all fields will be relevant to the item you are updating, and all
       fields are optional.
     </p>
@@ -198,7 +196,7 @@
 
 </table>
 
-</div>
+</div></div></div>
 
 </form>
 
