Fixed map display on z3950 templates. z3950 can now do SiteSearch, but only on valid ISBNs.

--- a/trunk/mobile_portal/mobile_portal/templates/z3950/item_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/item_detail.xhtml
@@ -80,7 +80,7 @@
     </div></div> 
 
 {% if map_hash %}
-    <div class="backgrounded-image" style="background-image:url('{% url osm_generated_map map_hash %}'); height:{{ device.max_image_height }}px;"> </div>
+    <div class="backgrounded-image" style="background-image:url('{% url osm_generated_map map_hash %}'); height:{{ map_height }}px;"> </div>
 {% endif %}
 
     <ul>
