--- a/trunk/mobile_portal/mobile_portal/templates/z3950/item_holdings_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/item_holdings_detail.xhtml
@@ -61,7 +61,7 @@
 <div class="section">
     <h2>{{ library.location|join:" - " }}</h2>
 {% if library.oxpoints_id and library.oxpoints_location %}
-    <div class="backgrounded-image" style="background-image:url('{% map_url library.oxpoints_location %}'); height:{{ device.max_image_height }}px">
+    <div class="backgrounded-image" style="background-image:url('{% map_url library.oxpoints_location %}'); height:{{ map_height }}px">
         {% include "maps/map_elements.xhtml" %}
     </div>
 {% endif %}
