--- a/trunk/mobile_portal/mobile_portal/templates/z3950/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/index.xhtml
@@ -18,8 +18,8 @@
 		{% endif %}
 		</div>
     <ul>
-        <li><a href="{% url maps_category_detail "library" %}">List of libraries</a></li>
-        <li class="round-bottom"><a href="{% url maps_nearby_detail "library" %}">Libraries near me</a></li>
+        <li><a href="{% url maps_category_detail "ulibrary" %}">List of libraries</a></li>
+        <li class="round-bottom"><a href="{% url maps_nearby_detail "ulibrary" %}">Libraries near me</a></li>
     </ul>
 </div>
 
