--- a/trunk/mobile_portal/mobile_portal/templates/500.html
+++ b/trunk/mobile_portal/mobile_portal/templates/500.html
@@ -7,7 +7,9 @@
 {% block title %}m.ox | 500 Server Error{% endblock %}
 
 {% block content %}
-<div class="front-section">
+<div class="section">
+	<h2>500 Error</h2>
+	<div class="note"><div class="bubble pad-10">
   <p>Sorry; something went wrong at our end.</p>
   <p>We've sent an e-mail to the webmaster, so it should be fixed soon.</p>
   <p>If you have any further information, questions or feedback, you can e-mail us at
@@ -20,5 +22,6 @@
       suggest = document.getElementById('alt-suggest');
       suggest.innerHTML = 'Alternatively, you can try <a href="#" onclick="javascript:history.back(1); return false;">going back</a> or returning to the home page.';
   </script>
+	</div></div>
 </div>
 {% endblock %}
