--- a/trunk/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/base.xhtml
@@ -16,8 +16,8 @@
 {% endif %}
 
 {% ifnotequal style_group "generic" %}
-    <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js"  type="text/javascript"> </script>
-    <script src="{{ MEDIA_URL }}js/groups/{{ style_group }}.js"  type="text/javascript"> </script>
+{#     <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js"  type="text/javascript"> </script> #}
+{#     <script src="{{ MEDIA_URL }}js/groups/{{ style_group }}.js"  type="text/javascript"> </script> #}
 {% endifnotequal %}
     <link  rel="stylesheet" href="{{ MEDIA_URL }}css/groups/{{ style_group }}.css" type="text/css" />
 	<link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
