--- a/trunk/mobile_portal/mobile_portal/templates/maps/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/index.xhtml
@@ -27,9 +27,9 @@
 <div class="form">
 	<form method="get" action="{% url googlesearch_index %}">
 		<h2>Search for Places</h2>
-		<p>
-		    To search for bus stops you can use an 8-digit oxontime code, or a central stop number (e.g. 'G3')
-		</p>
+        <div class="note"><div class="bubble pad-10">
+		    Search for places by name or go straight to a bus stop by entering its 8 digit Oxontime Code or a central stop number (e.g. 'E7).
+		    </div></div>
   		<p>
 			{{ search_form.query }}
 			<input type="hidden" name="application" value="maps">
