--- a/trunk/mobile_portal/mobile_portal/templates/maps/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/index.xhtml
@@ -28,7 +28,7 @@
 	<form method="get" action="{% url googlesearch_index %}">
 		<h2>Search for Places</h2>
         <div class="note"><div class="bubble pad-10">
-		    Search for places by name or go straight to a bus stop by entering its 8 digit Oxontime Code or a central stop number (e.g. 'E7).
+		    Search for places by name or go straight to a bus stop by entering its 8 digit Oxontime Code or a central stop number (e.g. 'E7').
 		    </div></div>
   		<p>
 			{{ search_form.query }}
