--- a/trunk/mobile_portal/mobile_portal/templates/core/update_location.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/update_location.xhtml
@@ -1,51 +1,14 @@
-{% load maps %}
+{% extends "core/base.xhtml" %}
 
-<div class="section" id="tab-auto">
+{% block title %}m.ox | Update location{% endblock %}
 
-<h2>Automatic geolocation</h2>
-<div class="note"><div class="bubble pad-5">
-{% if preferences.location.placemark %}
-        <p id="location_status">We think you are somewhere near <strong class="nobr">{{ preferences.location.placemark.0 }}</strong> ({{ preferences.location.location.0 }} {{ preferences.location.location.1 }}).</p>
-{% else %}
-{% if preferences.location.location %}
-        <p id="location_status">We think you are somewhere near <strong class="nobr">{{ preferences.location.location.0 }} {{ preferences.location.location.1 }}</strong>.</p>
-{% else %}
-        <p id="location_status">Sorry, but we are unable to determine your location automatically.</p>
-        <script type="text/javascript">
-            $(document).ready(function() {
-                if (require_location && positionMethodAvailable())
-                    $('#location_status').html('We do not yet have a location for you; please wait while we attempt to determine one.');
-                else if (positionMethodAvailable())
-                    $('#location_status').css('display', 'none');
-            });
-        </script>
-{% endif %}
-{% endif %}
-<p id="location_update"> </p>
-        <script type="text/javascript">
-            if (positionMethodAvailable())
-                $('#location_update').append(' <a href="#" onclick="javascript:requestPosition();">Determine automatically<\/a>');
-        </script>
-        </div></div>
-</div>
+{% block extrahead %}{{ block.super }}
+<meta name="robots" content="noindex"/>
+{% endblock %}
+
+{% block content %}
+
+{% include "core/update_location_embed.xhtml" %}
 
 
-<div class="section" id="tab-manual">
-
-<h2>Update location manually</h2>
-
-<div class="bubble pad-10">Examples: 'oucs' (a unit code), 'Trinity College' (a college or department), 'Parks Road' (an address), 'OX1 3PG' (a postcode).</div>
-
-<span style="text-align:center;">
-<form method="get" action="." id="manual_location_form">
-{% if return_url %}
-        <input name="return_url" type="hidden" value="{{ return_url }}"/>
-{% endif %}
-        <input id="location" name="location" value="{{ location }}"/>
-        <input type="submit" value="Update"/>
-</span>
-
-</form>
-
-</div>
-
+{% endblock %}
